--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connection - Website</title>
+    <title>ABNKKBSNPLAko?! - Website</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <h1>Connection Test</h1>
+        <h1>Relive the Journey of Filipino School Life!</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
