Added files and nav implementation

--- a/home.html
+++ b/home.html
@@ -9,16 +9,18 @@
 <body>
     <header>
         <h1>Relive the Journey of Filipino School Life!</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#explore">Explore More</a></li>
+        <nav class="navBar">
+            <div class="logo">Acoustic 6</div>
+            <ul class="nav-links">
+                <li><a href="home.html">Home page</a></li>
+                <li><a href="#about.html">About Us</a></li>
+                <li><a href="#explore.html">Explore More</a></li>
             </ul>
+            <button class="btn">Read Now</button>
         </nav>
     </header>
     
-    <section id="home">
+    <section id="">
         <h2>Welcome to the ABNKKBSNPLAko?! Website</h2>
         <p>A glimpse into Bob Ong’s nostalgic journey through Filipino school life.</p>
     </section>
