--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
                 <li><a href="#about.html">About Us</a></li>
                 <li><a href="#explore.html">Explore More</a></li>
             </ul>
-            <button class="btn">Read Now</button>
+            <button class="readbtn">Read Now</button>
         </nav>
     </header>
     
