--- a/home.html
+++ b/home.html
@@ -15,9 +15,9 @@
         <nav class="navBar">
             <div class="logo">Acoustic 6</div>
             <ul class="nav-links">
-                <li><a href="home.html">Home page</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="explore.html">Explore More</a></li>
+                <li><a href="home.html" class="nav-routes">Home page</a></li>
+                <li><a href="about.html" class="nav-routes">About Us</a></li>
+                <li><a href="explore.html" class="nav-routes">Explore More</a></li>
             </ul>
             <button class="readbtn">Read Now</button>
         </nav>
@@ -49,8 +49,53 @@
         </div>
 
     </section>
-    <footer>
-        <p>&copy; 2025 ABNKKBSNPLAko?! Fan Site</p>
-    </footer>
+
+    <section id="book-magic">
+        <div class="book-content">
+            <div class="book-text">
+                <h2>Experience the Magic of <br><strong>ABNKKBSNPLAko?!</strong> - A Filipino Classic Reimagined</h2>
+                <p>ABNKKBSNPLAko?! is a beloved Filipino book that resonates with students and readers alike. Its humor and relatable themes have made it a cultural phenomenon in the Philippines.</p>
+                <div class="book-impact">
+                    <div>
+                        <h3>Cultural Impact</h3>
+                        <p>This book has shape the way Filipino youth view duration and friendship.</p>
+                    </div>
+                    <div>
+                        <h3>Enduring Popularity</h3>
+                        <p>Its timeless stories continue to inspire new generations of readers in the Philippines.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="book-image">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="" id="bob-ong-style">
+        <div class="bob-ong-content">
+            <div class="bon-ong-image">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+            <div class="bob-ong-text">
+                <h2>Discover the brilliance of <br>Bob Ong's storytelling and writing style.</h2>
+                <p>Bob Ong is one of the most influential contemporary Filipino authos, know for his witty and insightful takes on Philippine culture, society, and everyday experiences. From humorous recollections of student days to sharp reflections on life, his works have become must-reads for modern readers who wish to understand the Filipino psyche.</p>
+                <p>He remains anonymous, his books ranging from heartwarming narratives to social commentaries, with themes that weave a lasting impact on Filipino literature.</p>
+            </div>
+        </div>
+    </section>
+    
+    <section id="story-quiz">
+        <div class="story-quiz-content">
+            <h2>Explore the Story Today!</h2>
+            <p>Dive into the story and take a fun "Who's your character?" personality quiz!</p>
+            <p></p>
+            <div class="quiz-buttons">
+                <button class="btn-r">Read</button>
+                <button class="btn-q">Quiz</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
