Created nav for other pages
Completed skeletal structure and basic CSS styling. Will implement assets such as images once received

--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav class="navBar">
@@ -22,7 +24,7 @@
             <button class="readbtn">Read Now</button>
         </nav>
     </header>
-    
+
     <section id="hero">
         <div class="hero-slider">
             <div class="hero-slide active" style="background-image: url('image1.jpg');"></div>
@@ -33,8 +35,8 @@
         <div class="hero-content">
             <h1 id="hero-title">Relive the Journey of Filipino School Life!</h1>
             <p id="hero-text">
-            Welcome to the interactive hub for <strong>ABNKKBSNPLAko?!</strong> Dive deep into the themes, 
-            characters, and humor that make this book a beloved classic among Filipino readers.
+                Welcome to the interactive hub for <strong>ABNKKBSNPLAko?!</strong> Dive deep into the themes,
+                characters, and humor that make this book a beloved classic among Filipino readers.
             </p>
             <div class="hero-btn">
                 <button class="btn-1">Explore</button>
@@ -54,7 +56,8 @@
         <div class="book-content">
             <div class="book-text">
                 <h2>Experience the Magic of <br><strong>ABNKKBSNPLAko?!</strong> - A Filipino Classic Reimagined</h2>
-                <p>ABNKKBSNPLAko?! is a beloved Filipino book that resonates with students and readers alike. Its humor and relatable themes have made it a cultural phenomenon in the Philippines.</p>
+                <p>ABNKKBSNPLAko?! is a beloved Filipino book that resonates with students and readers alike. Its humor
+                    and relatable themes have made it a cultural phenomenon in the Philippines.</p>
                 <div class="book-impact">
                     <div>
                         <h3>Cultural Impact</h3>
@@ -80,12 +83,16 @@
             </div>
             <div class="bob-ong-text">
                 <h2>Discover the brilliance of <br>Bob Ong's storytelling and writing style.</h2>
-                <p>Bob Ong is one of the most influential contemporary Filipino authos, know for his witty and insightful takes on Philippine culture, society, and everyday experiences. From humorous recollections of student days to sharp reflections on life, his works have become must-reads for modern readers who wish to understand the Filipino psyche.</p>
-                <p>He remains anonymous, his books ranging from heartwarming narratives to social commentaries, with themes that weave a lasting impact on Filipino literature.</p>
+                <p>Bob Ong is one of the most influential contemporary Filipino authos, know for his witty and
+                    insightful takes on Philippine culture, society, and everyday experiences. From humorous
+                    recollections of student days to sharp reflections on life, his works have become must-reads for
+                    modern readers who wish to understand the Filipino psyche.</p>
+                <p>He remains anonymous, his books ranging from heartwarming narratives to social commentaries, with
+                    themes that weave a lasting impact on Filipino literature.</p>
             </div>
         </div>
     </section>
-    
+
     <section id="story-quiz">
         <div class="story-quiz-content">
             <h2>Explore the Story Today!</h2>
@@ -98,4 +105,5 @@
         </div>
     </section>
 </body>
+
 </html>
