Added images for Homepage. Also included footers on all pages

--- a/home.html
+++ b/home.html
@@ -52,58 +52,64 @@
 
     </section>
 
-    <section id="book-magic">
-        <div class="book-content">
-            <div class="book-text">
-                <h2>Experience the Magic of <br><strong>ABNKKBSNPLAko?!</strong> - A Filipino Classic Reimagined</h2>
-                <p>ABNKKBSNPLAko?! is a beloved Filipino book that resonates with students and readers alike. Its humor
-                    and relatable themes have made it a cultural phenomenon in the Philippines.</p>
-                <div class="book-impact">
-                    <div>
-                        <h3>Cultural Impact</h3>
-                        <p>This book has shape the way Filipino youth view duration and friendship.</p>
-                    </div>
-                    <div>
-                        <h3>Enduring Popularity</h3>
-                        <p>Its timeless stories continue to inspire new generations of readers in the Philippines.</p>
+    <section id="home-hero">    
+        <section id="book-magic">
+            <div class="book-content">
+                <div class="book-text">
+                    <h2>Experience the Magic of <br><strong>ABNKKBSNPLAko?!</strong> - A Filipino Classic Reimagined</h2>
+                    <p>ABNKKBSNPLAko?! is a beloved Filipino book that resonates with students and readers alike. Its humor
+                        and relatable themes have made it a cultural phenomenon in the Philippines.</p>
+                    <div class="book-impact">
+                        <div>
+                            <h3>Cultural Impact</h3>
+                            <p>This book has shape the way Filipino youth view duration and friendship.</p>
+                        </div>
+                        <div>
+                            <h3>Enduring Popularity</h3>
+                            <p>Its timeless stories continue to inspire new generations of readers in the Philippines.</p>
+                        </div>
                     </div>
                 </div>
+                <div class="book-image">
+                    <img src="assets/home/book cover.png" alt="">
+                </div>
             </div>
-            <div class="book-image">
-                <img src="" alt="">
+        </section>
+    
+        <section class="" id="bob-ong-style">
+            <div class="bob-ong-content">
+                <div class="bon-ong-image">
+                    <img src="assets/home/image 1.png" alt="">
+                    <img src="assets/home/image.png" alt="">
+                </div>
+                <div class="bob-ong-text">
+                    <h2>Discover the brilliance of <br>Bob Ong's storytelling and writing style.</h2>
+                    <p>Bob Ong is one of the most influential contemporary Filipino authors, know for his witty and
+                        insightful takes on Philippine culture, society, and everyday experiences. From humorous
+                        recollections of student days to sharp reflections on life, his works have become must-reads for
+                        modern readers who wish to understand the Filipino psyche.</p>
+                    <p>He remains anonymous, his books ranging from heartwarming narratives to social commentaries, with
+                        themes that weave a lasting impact on Filipino literature.</p>
+                </div>
             </div>
-        </div>
+        </section>
+    
+        <section id="story-quiz">
+            <div class="story-quiz-content">
+                <h2>Explore the Story Today!</h2>
+                <p>Dive into the story and take a fun "Who's your character?" personality quiz!</p>
+                <p></p>
+                <div class="quiz-buttons">
+                    <button class="btn-r">Read</button>
+                    <button class="btn-q">Quiz</button>
+                </div>
+            </div>
+        </section> 
     </section>
 
-    <section class="" id="bob-ong-style">
-        <div class="bob-ong-content">
-            <div class="bon-ong-image">
-                <img src="" alt="">
-                <img src="" alt="">
-            </div>
-            <div class="bob-ong-text">
-                <h2>Discover the brilliance of <br>Bob Ong's storytelling and writing style.</h2>
-                <p>Bob Ong is one of the most influential contemporary Filipino authos, know for his witty and
-                    insightful takes on Philippine culture, society, and everyday experiences. From humorous
-                    recollections of student days to sharp reflections on life, his works have become must-reads for
-                    modern readers who wish to understand the Filipino psyche.</p>
-                <p>He remains anonymous, his books ranging from heartwarming narratives to social commentaries, with
-                    themes that weave a lasting impact on Filipino literature.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="story-quiz">
-        <div class="story-quiz-content">
-            <h2>Explore the Story Today!</h2>
-            <p>Dive into the story and take a fun "Who's your character?" personality quiz!</p>
-            <p></p>
-            <div class="quiz-buttons">
-                <button class="btn-r">Read</button>
-                <button class="btn-q">Quiz</button>
-            </div>
-        </div>
-    </section>
+    <footer class="page-footers">
+        <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
+    </footer> 
 </body>
 
 </html>
