Reverted back to before GetSkeleton cuz it pissed me off lmao
Also changed all buttons to a links

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                 <li><a href="about.html" class="nav-routes">About Us</a></li>
                 <li><a href="explore.html" class="nav-routes">Explore More</a></li>
             </ul>
-            <button class="readbtn">Read Now</button>
+            <a href="read.html" class="readbtn">Read Now</a>
         </nav>
     </header>
 
@@ -43,8 +43,8 @@
                 characters, and humor that make this book a beloved classic among Filipino readers.
             </p>
             <div class="hero-btn">
-                <button class="btn-1">Explore</button>
-                <button class="btn-2">Read</button>
+                <a href="explore.html" class="btn-1">Explore</a>
+                <a href="read.html" class="btn-2">Read</a>
             </div>
         </div>
 
@@ -107,8 +107,8 @@
                 <p>Dive into the story and take a fun "Who's your character?" personality quiz!</p>
                 <p></p>
                 <div class="quiz-buttons">
-                    <button class="btn-r">Read</button>
-                    <button class="btn-q">Quiz</button>
+                    <a href="read.html" class="btn-r">Read</a>
+                    <a href="quiz.html" class="btn-q">Quiz</a>
                 </div>
             </div>
         </section>
