Done with about page
Just need images

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker+Regular:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -24,6 +25,61 @@
             <button class="readbtn">Read Now</button>
         </nav>
     </header>
+
+    <div class="about">
+        <h4>About Us</h4>
+        <h1><strong>Meet 'Acoustic 6'- The Team Behind the Website</strong></h1>
+        <p>Behind this interactive storytelling experience is Autistic 6, a dedicated team of developers, and storytellers who have worked together to bring ABNKKBSNPLAko?! to life in a new and engaging way.</p>
+    </div>
+
+    <div class="box">
+        <div class="rows">
+
+
+            <!-- Top Row -->
+            <div class="person">
+                <img src="" alt="" class="p-img">
+                <h2>Emmanuelle Salga</h2>
+                <p>Developer</p>
+            </div>
+
+            <div class="person">
+                <img src="" alt="" class="p-img">
+                <h2>Mark Luis Balbin</h2>
+                <p>Developer</p>
+            </div>
+
+            <div class="person">
+                <img src="" alt="" class="p-img">
+                <h2>Rania San Pedro</h2>
+                <p>UI/UX Designer, Content Writer</p>
+            </div>
+
+        </div>
+
+        <!-- Bottom Row -->
+        <div class="rows">
+
+            <div class="person">
+                <img src="" alt="" class="p-img">
+                <h2>Bea Athena Salazar</h2>
+                <p>UI/UX Designer</p>
+            </div>
+
+            <div class="person">
+                <img src="" alt="" class="p-img">
+                <h2>Nicolas Bobis</h2>
+                <p>Content Writer</p>
+            </div>
+
+            <div class="person">
+                <img src="" alt="" class="p-img">
+                <h2>Marc Daniel Cabrera</h2>
+                <p>Content Writer</p>
+            </div>
+            
+        </div>
+    </div>
 
     <footer class="page-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
