Completed quiz html file

--- a/quiz.html
+++ b/quiz.html
@@ -1,20 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ABNKKBSNPLAko?! - Website</title>
-        <link rel="stylesheet" href="index.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ABNKKBSNPLAko?! - Website</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+</head>
+
 <body>
-    
+    <header>
+        <nav class="navBar">
+            <div class="logo">Acoustic 6</div>
+            <ul class="nav-links">
+                <li><a href="home.html" class="nav-routes">Home page</a></li>
+                <li><a href="about.html" class="nav-routes">About Us</a></li>
+                <li><a href="explore.html" class="nav-routes">Explore More</a></li>
+            </ul>
+            <a href="read.html" class="readbtn">Read Now</a>
+        </nav>
+    </header>
+
+    <div class="quiz">
+        <h2>Quiz</h2>
+        <h1>Which 'ABNKKBSNPLAko?!' Character Are You?</h1>
+        <p>Ever wondered which ABNKKBSNPLAko?! character best matches your personality? Take this quiz to find out! Are
+            you the nostalgic dreamer, the class clown, or the ultimate best friend? Let’s go!</p>
+        <a href="" class="quiz-btn">Start the Quiz</a>
+    </div>
+
+    <div class="qbox">
+
+        <!-- Top Row-->
+        <div class="qrow">
+            <div class="qcharacter">
+                <img src="assets/quiz/roberto ong.png" alt="" class="qimg">
+                <h2><strong>Roberto "Bob" Ong</strong></h2>
+                <h3>The Nostalgic Storyteller & Everyman Student</h3>
+                <p>Roberto “Bob” Ong serves as the narrator and protagonist of the story. He is a relatable, observant,
+                    and humorous student who looks back at his school years with a mix of fondness and regret. His
+                    journey is filled with childhood struggles, teenage misadventures, and the realities of adulthood,
+                    making him a mirror of every Filipino student's experience.</p>
+                <p class="t-c-m">
+                    <strong>Traits:</strong> Thoughtful, sentimental, self-deprecating, witty
+                    <br>
+                    <strong>Biggest Challenge:</strong> Navigating school life, discovering his purpose
+                    <br>
+                    <br>
+                    <strong>Memorable Moments:</strong>
+                </p>
+                <ul class="m-list">
+                    <li>His struggles with reading and writing in elementary</li>
+                    <li>Developing a crush on Special Someone</li>
+                    <li>Embarrassing and funny moments in school</li>
+                    <li>Reflecting on his past as an adult</li>
+                </ul>
+            </div>
+            <div class="qcharacter">
+                <img src="assets/quiz/special someone.png" alt="" class="qimg">
+                <h2>Special Someone</h2>
+                <h3>The Mysterious Crush</h3>
+                <p>She represents Bob Ong’s first love and ultimate "what if?". Special Someone is a classmate he deeply
+                    admires but never has the courage to pursue seriously. She is kind, smart, and seemingly out of
+                    reach—symbolizing the unfulfilled high school romance that many can relate to.</p>
+                <p class="t-c-m">
+                    <strong>Traits:</strong> Sweet, intelligent, reserved
+                    <br>
+                    <strong>Biggest Challenge:</strong> Staying unaware of Bob Ong’s feelings
+                    <br>
+                    <br>
+                    <strong>Memorable Moments:</strong>
+                </p>
+                <ul class="m-list">
+                    <li>Bob Ong secretly crushing on her during high school</li>
+                    <li>Their awkward but meaningful interactions</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- Bottom Row-->
+        <div class="qrow">
+            <div class="qcharacter">
+                <img src="assets/quiz/ulo.png" alt="" class="qimg">
+                <h2>Ulo</h2>
+                <h3 class="desc">The Loyal & Hilarious Best Friend</h3>
+                <p>Ulo is Bob Ong’s sidekick, providing comic relief throughout the story. He is loud, funny, and
+                    carefree—always joking around but also supporting Bob Ong through tough times. His humor helps
+                    balance out the stressful and emotional moments of school life.</p>
+                <p class="t-c-m">
+                    <strong>Traits:</strong> Goofy, easygoing, fiercely loyal
+                    <strong>Biggest Challenge:</strong>
+                    <br>
+                    Balancing fun and responsibility
+                    <br>
+                    <br>
+                    <strong>Memorable Moments:</strong>
+                </p>
+                <ul class="m-list">
+                    <li>Pulling pranks in class and getting in trouble</li>
+                    <li>Giving funny advice about school and life</li>
+                </ul>
+            </div>
+            <div class="qcharacter">
+                <img src="assets/quiz/portia.png" alt="" class="qimg">
+                <h2>Portia</h2>
+                <h3>The Sweet & Friendly Girl Next Door</h3>
+                <p>Portia is another notable female character who plays a part in Bob Ong’s school journey. She is
+                    friendly, approachable, and sometimes caught in the middle of the high school drama.</p>
+                <p class="t-c-m">
+                    <strong>Traits:</strong> Kind, approachable, observant
+                    <br>
+                    <br>
+                    <strong>Memorable Moments:</strong>
+                </p>
+                <ul class="m-list">
+                    <li>Being part of Bob Ong’s friend circle and school life</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 
     <footer class="page-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
-    </footer> 
+    </footer>
 </body>
+
 </html>
