fixing up read button b4 bed

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <li><a href="about.html" class="nav-routes">About Us</a></li>
                 <li><a href="explore.html" class="nav-routes">Explore More</a></li>
             </ul>
-            <button class="readbtn">Read Now</button>
+            <a href="read.html" class="readbtn">Read Now</a>
         </nav>
     </header>
 
