--- a/read.html
+++ b/read.html
@@ -13,6 +13,17 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navBar">
+            <div class="logo">Acoustic 6</div>
+            <ul class="nav-links">
+                <li><a href="home.html" class="nav-routes">Home page</a></li>
+                <li><a href="about.html" class="nav-routes">About Us</a></li>
+                <li><a href="explore.html" class="nav-routes">Explore More</a></li>
+            </ul>
+            <a href="read.html" class="readbtn">Read Now</a>
+        </nav>
+    </header>
     
     <footer class="page-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
