intro box all same across similar pages

--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
         </nav>
     </header>
 
-    <div class="about">
-        <h4>About Us</h4>
-        <h1><strong>Meet 'Acoustic 6'- The Team Behind the Website</strong></h1>
+    <div class="intro-box">
+        <h2>About Us</h2>
+        <h1>Meet 'Acoustic 6'- The Team Behind the Website</h1>
         <p>Behind this interactive storytelling experience is Acoustic 6, a dedicated team of developers, and storytellers who have worked together to bring ABNKKBSNPLAko?! to life in a new and engaging way.</p>
     </div>
 
