--- a/quiz.html
+++ b/quiz.html
@@ -26,7 +26,7 @@
         </nav>
     </header>
 
-    <div class="quiz">
+    <div class="intro-box">
         <h2>Quiz</h2>
         <h1>Which 'ABNKKBSNPLAko?!' Character Are You?</h1>
         <p>Ever wondered which ABNKKBSNPLAko?! character best matches your personality? Take this quiz to find out! Are
