--- a/explore.html
+++ b/explore.html
@@ -26,11 +26,12 @@
         </nav>
     </header>
     
-    <section id="explore-start">
-        <h3>Explore</h3>
-        <h1>Discover the Heart of Filipino<br>School Life</h1>
-        <p>Dive into the rich themes of ABNKKBSNPLAko?! that resonate with every Filipino student. Our <br> interactive format brings these themes to life, making learning both fun and engaging.</p>
-    </section>
+    <div class="intro-box">
+        <h2>Explore</h2>
+        <h1>Discover the Heart of Filipino School Life</h1>
+        <p>Dive into the rich themes of ABNKKBSNPLAko?! that resonate with every Filipino student. Our
+            interactive format brings these themes to life, making learning both fun and engaging.</p>
+    </div>
 
     <section id="explore">
         <div id="e-1">
