--- a/read.html
+++ b/read.html
@@ -24,6 +24,13 @@
             <a href="read.html" class="readbtn">Read Now</a>
         </nav>
     </header>
+
+    <div class="intro-box">
+        <h2>Read</h2>
+        <h1>Explore the In-Depth Experience of Roberto Ong's Life</h1>
+        <p>A New Media Adaptation</p>
+        <h3>Read a Four-part storytelling journey inspired by Bob Ong’s ABNKKBSNPLAko?!</h3>
+    </div>
     
     <footer class="page-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
