--- a/read.html
+++ b/read.html
@@ -17,7 +17,7 @@
         <nav class="navBar">
             <div class="logo">Acoustic 6</div>
             <ul class="nav-links">
-                <li><a href="home.html" class="nav-routes">Home page</a></li>
+                <li><a href="index.html" class="nav-routes">Home page</a></li>
                 <li><a href="about.html" class="nav-routes">About Us</a></li>
                 <li><a href="explore.html" class="nav-routes">Explore More</a></li>
             </ul>
