got code from preview branch for comment section

--- a/read.html
+++ b/read.html
@@ -31,6 +31,21 @@
         <p>A New Media Adaptation</p>
         <h3>Read a Four-part storytelling journey inspired by Bob Ong’s ABNKKBSNPLAko?!</h3>
     </div>
+
+    <section class="comment-box">
+        <div class="comment-section">
+            <form action="" id="comment-form">
+                <textarea name="" id="comment-input" placeholder="Add a comment..." required></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+
+        <h2>Comments</h2>
+        <div class="comment-list">
+        </div>
+
+        <button id="load-more">See More...</button>
+    </section>
     
     <footer class="page-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
