--- a/read.html
+++ b/read.html
@@ -50,5 +50,7 @@
     <footer class="page-footers">
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
     </footer> 
+
+    <script src="script.js"></script>
 </body>
 </html>
