connecting back-end to front-end to display comments from db

--- a/read.html
+++ b/read.html
@@ -41,7 +41,8 @@
         </div>
 
         <h2>Comments</h2>
-        <div class="comment-list">
+        <div id ="comments" class="comment-list">
+            <!-- comments here -->
         </div>
 
         <button id="load-more">See More...</button>
