optimizing cuz im so happy

--- a/read.html
+++ b/read.html
@@ -35,7 +35,7 @@
     <section class="comment-box">
         <div class="comment-section">
             <form action="" id="comment-form">
-                <textarea name="" id="comment-input" placeholder="Add a comment..." required></textarea>
+                <textarea name="" id="comment-input" placeholder="Share your thoughts!" required></textarea>
                 <button type="submit">Submit</button>
             </form>
         </div>
