read section base

--- a/read.html
+++ b/read.html
@@ -32,6 +32,24 @@
         <h3>Read a Four-part storytelling journey inspired by Bob Ong’s ABNKKBSNPLAko?!</h3>
     </div>
 
+    <div class="reading-container">
+        <div class="reading-section active">
+            <h1>Elementary Life</h1>
+        </div>
+
+        <div class="reading-section">
+            <h1>High School</h1>
+        </div>
+
+        <div class="reading-section">
+            <h1>College</h1>
+        </div>
+
+        <div class="reading-section">
+            <h1>Adulthood</h1>
+        </div>
+    </div>
+
     <section class="comment-box">
         <div class="comment-section">
             <form action="" id="comment-form">
