dynamic button section feature

--- a/read.html
+++ b/read.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker+Regular:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,15 +39,20 @@
         </div>
 
         <div class="reading-section">
-            <h1>High School</h1>
+            <h1>High School Life</h1>
         </div>
 
         <div class="reading-section">
-            <h1>College</h1>
+            <h1>College Life</h1>
         </div>
 
         <div class="reading-section">
             <h1>Adulthood</h1>
+        </div>
+
+        <div class="reading-buttons">
+            <button id="prev" style="display: none;">Previous</button>
+            <button id="next">High School</button>
         </div>
     </div>
 
