--- a/read.html
+++ b/read.html
@@ -76,6 +76,7 @@
         <p>© 2025 ABNKKBSNPLAko?! All rights reserved.</p>
     </footer> 
 
-    <script src="script.js"></script>
+    <script src="commentHandler.js"></script>
+    <script src="navigation.js"></script>
 </body>
 </html>
